tests/ui/errors/snapshots/parse_rust_mut_ref_self.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:16]
 4 │ impl Counter {
 5 │   fn set_count(&mut self, n: int) {
   ·                ────┬────
   ·                    ╰── invalid syntax
 6 │     self.count = n;
   ╰────
  help: Lisette methods receive `self` by reference. Use `self` instead · code: [parse.syntax_error]
